--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -28,7 +28,7 @@
         <Binding Path="MainVM" Source="{StaticResource Locator}"/>
     </Page.DataContext>
 
-    <SplitView x:Name="MySplitView" DisplayMode="Inline" IsPaneOpen="False" 
+    <SplitView x:Name="MySplitView" DisplayMode="Overlay" IsPaneOpen="False" 
 		Background="{StaticResource ApplicationPageBackgroundThemeBrush}" OpenPaneLength="150">
         <SplitView.Pane>
             <Grid Background="{StaticResource splitwiseGreyBG}">
@@ -84,9 +84,9 @@
                             <pr:PullToRefreshBox Grid.Row="1">
                                 <pr:PullToRefreshBox.TopIndicatorTemplate>
                                     <DataTemplate>
-                                        <pr:PullRefreshProgressControl Progress="{Binding}" 
-										PullToRefreshText="Pull to Refresh"
-										ReleaseToRefreshText="Release To Refresh"/>
+                                        <pr:PullRefreshProgressControl
+										    PullToRefreshText="Pull to Refresh"
+										    ReleaseToRefreshText="Release To Refresh"/>
                                     </DataTemplate>
                                 </pr:PullToRefreshBox.TopIndicatorTemplate>
 
@@ -131,7 +131,52 @@
                     </PivotItem>
 
                     <PivotItem Header="Groups">
-                        <Grid/>
+                        <pr:PullToRefreshBox>
+                            <pr:PullToRefreshBox.TopIndicatorTemplate>
+                                <DataTemplate>
+                                    <pr:PullRefreshProgressControl
+										    PullToRefreshText="Pull to Refresh"
+										    ReleaseToRefreshText="Release To Refresh"/>
+                                </DataTemplate>
+                            </pr:PullToRefreshBox.TopIndicatorTemplate>
+
+                            <ListView ItemsSource="{Binding GroupsList}">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <RelativePanel Height="100">
+                                            <Ellipse Height="40" Width="40" x:Name="image"
+                                                     RelativePanel.AlignVerticalCenterWithPanel="True">
+                                                <Ellipse.Fill>
+                                                    <ImageBrush ImageSource="Assets/Images/groupIcon.png"/>
+                                                </Ellipse.Fill>
+                                            </Ellipse>
+                                            <TextBlock Text="{Binding Name}" 
+                                                       RelativePanel.AlignVerticalCenterWith="image"
+                                                       RelativePanel.RightOf="image" Margin="15,0,0,0"/>
+                                            <Grid RelativePanel.AlignRightWithPanel="True"
+                                                      RelativePanel.AlignVerticalCenterWithPanel="True">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto"/>
+                                                    <RowDefinition Height="Auto"/>
+                                                </Grid.RowDefinitions>
+                                                <TextBlock Foreground="{Binding Balance, Converter={StaticResource UserBalanceTextColorConverter}}"
+                                                               HorizontalAlignment="Right"
+                                                               Text="{Binding Balance, Converter={StaticResource UserBalanceTextConverter}}" FontSize="13"/>
+                                                <TextBlock Foreground="{Binding Balance, Converter={StaticResource UserBalanceTextColorConverter}}"
+                                                               Grid.Row="1" HorizontalAlignment="Right"
+                                                               Visibility="{Binding Balance, Converter={StaticResource UserBalanceVisibilityConverter}}"
+                                                               Text="{Binding Balance, Converter={StaticResource UserBalanceAmountConverter}}" FontSize="18"/>
+                                            </Grid>
+                                        </RelativePanel>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                            <Interactivity:Interaction.Behaviors>
+                                <Core:EventTriggerBehavior EventName="RefreshInvoked">
+                                    <Core:InvokeCommandAction Command="{Binding RefreshDataCommand, Mode=OneWay}"/>
+                                </Core:EventTriggerBehavior>
+                            </Interactivity:Interaction.Behaviors>
+                        </pr:PullToRefreshBox>
                     </PivotItem>
 
                     <PivotItem Header="Recent">
@@ -140,7 +185,7 @@
                 </Pivot>
 
                 <Canvas Background="DarkGray" Opacity="0.5" 
-					Grid.Row="1"
+					Grid.RowSpan="2"
 					Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                 <ProgressRing IsActive="{Binding IsBusy}" Grid.Row="1"/>
             </Grid>
