--- a/Split_It/Split_It/MainPage.xaml
+++ b/Split_It/Split_It/MainPage.xaml
@@ -6,8 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pr="using:PullToRefresh.UWP"
     xmlns:winux="using:WinUX.Xaml.Converters"
-    xmlns:con_bal="using:Split_It.Converter.UserBalance"
-    xmlns:grp_bal="using:Split_It.Converter.GroupBalance"
+    xmlns:con_bal="using:Split_It.Converter.Balance"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     x:Class="Split_It.MainPage"
     mc:Ignorable="d">
@@ -19,15 +18,10 @@
             </ResourceDictionary.MergedDictionaries>
             <winux:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             
-            <con_bal:TextConverter x:Key="UserBalanceTextConverter"/>
-            <con_bal:TextColorConverter x:Key="UserBalanceTextColorConverter"/>
-            <con_bal:AmountConverter x:Key="UserBalanceAmountConverter"/>
-            <con_bal:VisibilityConverter x:Key="UserBalanceVisibilityConverter"/>
-
-            <grp_bal:TextConverter x:Key="GroupBalanceTextConverter"/>
-            <grp_bal:TextColorConverter x:Key="GroupBalanceTextColorConverter"/>
-            <grp_bal:AmountConverter x:Key="GroupBalanceAmountConverter"/>
-            <grp_bal:VisibilityConverter x:Key="GroupBalanceVisibilityConverter"/>
+            <con_bal:TextConverter x:Key="BalanceTextConverter"/>
+            <con_bal:TextColorConverter x:Key="BalanceTextColorConverter"/>
+            <con_bal:AmountConverter x:Key="BalanceAmountConverter"/>
+            <con_bal:VisibilityConverter x:Key="BalanceVisibilityConverter"/>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -116,13 +110,13 @@
                                                         <RowDefinition Height="Auto"/>
                                                         <RowDefinition Height="Auto"/>
                                                     </Grid.RowDefinitions>
-                                                    <TextBlock Foreground="{Binding Balance, Converter={StaticResource UserBalanceTextColorConverter}}"
+                                                    <TextBlock Foreground="{Binding Balance, Converter={StaticResource BalanceTextColorConverter}}"
                                                                HorizontalAlignment="Right"
-                                                               Text="{Binding Balance, Converter={StaticResource UserBalanceTextConverter}}" FontSize="13"/>
-                                                    <TextBlock Foreground="{Binding Balance, Converter={StaticResource UserBalanceTextColorConverter}}"
+                                                               Text="{Binding Balance, Converter={StaticResource BalanceTextConverter}}" FontSize="13"/>
+                                                    <TextBlock Foreground="{Binding Balance, Converter={StaticResource BalanceTextColorConverter}}"
                                                                Grid.Row="1" HorizontalAlignment="Right"
-                                                               Visibility="{Binding Balance, Converter={StaticResource UserBalanceVisibilityConverter}}"
-                                                               Text="{Binding Balance, Converter={StaticResource UserBalanceAmountConverter}}" FontSize="18"/>
+                                                               Visibility="{Binding Balance, Converter={StaticResource BalanceVisibilityConverter}}"
+                                                               Text="{Binding Balance, Converter={StaticResource BalanceAmountConverter}}" FontSize="18"/>
                                                 </Grid>
                                             </RelativePanel>
                                         </DataTemplate>
@@ -166,13 +160,13 @@
                                                     <RowDefinition Height="Auto"/>
                                                     <RowDefinition Height="Auto"/>
                                                 </Grid.RowDefinitions>
-                                                <TextBlock Foreground="{Binding Members, Converter={StaticResource GroupBalanceTextColorConverter}}"
+                                                <TextBlock Foreground="{Binding Members, Converter={StaticResource BalanceTextColorConverter}}"
                                                                HorizontalAlignment="Right"
-                                                               Text="{Binding Members, Converter={StaticResource GroupBalanceTextConverter}}" FontSize="13"/>
-                                                <TextBlock Foreground="{Binding Members, Converter={StaticResource GroupBalanceTextColorConverter}}"
+                                                               Text="{Binding Members, Converter={StaticResource BalanceTextConverter}}" FontSize="13"/>
+                                                <TextBlock Foreground="{Binding Members, Converter={StaticResource BalanceTextColorConverter}}"
                                                                Grid.Row="1" HorizontalAlignment="Right"
-                                                               Visibility="{Binding Members, Converter={StaticResource GroupBalanceVisibilityConverter}}"
-                                                               Text="{Binding Members, Converter={StaticResource GroupBalanceAmountConverter}}" FontSize="18"/>
+                                                               Visibility="{Binding Members, Converter={StaticResource BalanceVisibilityConverter}}"
+                                                               Text="{Binding Members, Converter={StaticResource BalanceAmountConverter}}" FontSize="18"/>
                                             </Grid>
                                         </RelativePanel>
                                     </DataTemplate>
